<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_main">
        <item
            android:id="@+id/menu_build"
            android:title="@string/menu_main_build"
            android:icon="@drawable/icon_empty">>
        </item>
        <item
            android:id="@+id/menu_new_project"
            android:title="@string/menu_main_new_project"
            android:icon="@drawable/icon_empty">>
        </item>
        <item
            android:id="@+id/menu_open_project"
            android:title="@string/menu_main_open_project"
            android:icon="@drawable/icon_empty">>
        </item>
        <item
            android:id="@+id/menu_settings"
            android:title="@string/menu_main_settings"
            android:icon="@drawable/icon_empty">>
        </item>
        <item
            android:id="@+id/menu_help"
            android:title="@string/menu_main_help"
            android:icon="@drawable/icon_empty">>
        </item>
        <item
            android:id="@+id/menu_exit"
            android:title="@string/menu_main_exit"
            android:icon="@drawable/icon_empty">>
        </item>
    </group>
    <group
        android:id="@+id/menu_edit">
        <item
            android:id="@+id/menu_undo"
            android:orderInCategory="1"
            android:title="@string/menu_edit_undo"
            android:icon="@drawable/button_undo_selector">
        </item>
        <item
            android:id="@+id/menu_redo"
            android:orderInCategory="2"
            android:title="@string/menu_edit_redo"
            android:icon="@drawable/button_redo_selector">
        </item>
        <item
            android:id="@+id/menu_select_all"
            android:orderInCategory="3"
            android:title="@string/menu_edit_select_all"
            android:icon="@drawable/icon_empty">>
        </item>
        <item
            android:id="@+id/menu_find"
            android:orderInCategory="4"
            android:title="@string/menu_edit_find"
            android:icon="@drawable/icon_empty">>
        </item>
        <item
            android:id="@+id/menu_find_and_replace"
            android:orderInCategory="5"
            android:title="@string/menu_edit_find_and_replace"
            android:icon="@drawable/icon_empty">>
        </item>
        <item
            android:id="@+id/menu_go_to_line"
            android:orderInCategory="6"
            android:title="@string/menu_edit_go_to_line"
            android:icon="@drawable/icon_empty">>
        </item>
    </group>
    <group
        android:id="@+id/menu_folder">
        <item
            android:id="@+id/menu_new_file"
            android:title="@string/menu_main_new_file"
            android:icon="@drawable/icon_empty">>
        </item>
        <item
            android:id="@+id/menu_open_file"
            android:title="@string/menu_main_open_file"
            android:icon="@drawable/icon_empty">
        </item>
        <item
            android:id="@+id/menu_save"
            android:title="@string/menu_main_save"
            android:icon="@drawable/button_save_selector">
        </item>
        <item
            android:id="@+id/menu_save_as"
            android:title="@string/menu_main_save_as"
            android:icon="@drawable/icon_empty">>
        </item>
        <item
            android:id="@+id/menu_save_all"
            android:title="@string/menu_main_save_all"
            android:icon="@drawable/icon_empty">>
        </item>
        <item
            android:id="@+id/menu_close_tab"
            android:title="@string/menu_main_close_tab"
            android:icon="@drawable/button_close_tab_selector">
        </item>
    </group>
</menu>