<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgroundProjectName"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:background="@color/colorBackgroundProjectName"
            android:text="@string/dialog_create_new_file_label_name"
            android:textColor="#3C3838"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextNameFile"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:autoText="false"
                android:ems="10"
                android:hint="@string/dailog_create_new_file_edittext_hint"
                android:inputType="text"
                android:singleLine="true" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@color/colorBackgroundProjectName"
                android:gravity="center_vertical"
                android:text=".inc"
                android:textColor="#3C3838"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorBackgroundProjectName"
            android:text="@string/dialog_create_new_file_label_path_for_create"
            android:textColor="#3C3838"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:background="@color/colorBackgroundProjectName">

            <RadioButton
                android:id="@+id/radioButtonIncludeFolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/dialog_create_new_file_radio_create_in_includes_folder"
                android:textColor="#3C3838"
                android:textSize="20sp"
                android:theme="@style/StyleRadioButton" />

            <RadioButton
                android:id="@+id/radioButtonProjectFolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_create_new_file_radio_create_in_project_folder"
                android:textColor="#3C3838"
                android:textSize="20sp"
                android:theme="@style/StyleRadioButton" />
        </RadioGroup>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>