<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorTabFocused">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgroundProjectName"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:background="@color/colorBackgroundProjectName"
            android:text="@string/dialog_create_new_project_label_name"
            android:textColor="#3C3838"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextNameProject"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:autoText="false"
            android:ems="10"
            android:hint="@string/dialog_cretae_new_project_edittext_hint"
            android:inputType="text"
            android:singleLine="true" />

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#635D5D" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackgroundProjectName"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:background="@color/colorTabBackground"
                android:text="@string/dialog_create_new_project_label_select_mc"
                android:textColor="#3C3838"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/dialog_create_new_project_type_mc_no"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>